[gd_scene load_steps=22 format=2]

[ext_resource path="res://GameScene.gd" type="Script" id=1]
[ext_resource path="res://materials/flatBlack.tres" type="Material" id=2]
[ext_resource path="res://basicMeshLibrary.meshlib" type="MeshLibrary" id=3]
[ext_resource path="res://Heart.gd" type="Script" id=4]
[ext_resource path="res://materials/spriteOverride.tres" type="Material" id=5]
[ext_resource path="res://sprites/heartPlanetCuore.png" type="Texture" id=6]
[ext_resource path="res://Lifebar.gd" type="Script" id=7]
[ext_resource path="res://sprites/purplecircle.png" type="Texture" id=8]
[ext_resource path="res://sprites/pinkcircle.png" type="Texture" id=9]
[ext_resource path="res://UI.gd" type="Script" id=10]
[ext_resource path="res://Card.tscn" type="PackedScene" id=11]
[ext_resource path="res://Card.tres" type="Theme" id=12]
[ext_resource path="res://L-curve.tres" type="Curve3D" id=13]
[ext_resource path="res://MobSpawner.gd" type="Script" id=14]
[ext_resource path="res://BaseEnemy.tscn" type="PackedScene" id=15]
[ext_resource path="res://enemies/WormEnemy.tscn" type="PackedScene" id=16]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 200, 180 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 100, 1, 63 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 6, 6, 6 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
params_billboard_mode = 1
params_billboard_keep_scale = true

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeartSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 0.6, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 3.25, 3.25, 1 ), Vector3( 3.5, 3.5, 1 ), Vector3( 3.25, 3.25, 1 ), Vector3( 3.5, 3.5, 1 ) ]
}

[node name="GameScene" type="Spatial"]
script = ExtResource( 1 )

[node name="GameSurface" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": "1"
}

[node name="GameBoard" type="StaticBody" parent="GameSurface"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="GameSurface/GameBoard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 3 )
cell_size = Vector3( 16, 16, 16 )
data = {
"cells": PoolIntArray( 0, 4, 1, 1, 4, 1, 2, 4, 1, 3, 4, 1, 4, 4, 1, 5, 4, 1, 6, 4, 1, 65529, 4, 1, 65530, 4, 1, 65531, 4, 1, 65532, 4, 1, 65533, 4, 1, 65534, 4, 1, 65535, 4, 1, 0, 5, 1, 1, 5, 1, 2, 5, 1, 3, 5, 1, 4, 5, 1, 5, 5, 1, 6, 5, 1, 65529, 5, 1, 65530, 5, 1, 65531, 5, 1, 65532, 5, 1, 65533, 5, 1, 65534, 5, 1, 65535, 5, 1, 0, 65530, 1, 1, 65530, 1, 2, 65530, 1, 3, 65530, 1, 4, 65530, 1, 5, 65530, 1, 6, 65530, 1, 65529, 65530, 1, 65530, 65530, 1, 65531, 65530, 1, 65532, 65530, 1, 65533, 65530, 1, 65534, 65530, 1, 65535, 65530, 1, 0, 65531, 1610612737, 1, 65531, 1, 2, 65531, 1, 3, 65531, 1, 4, 65531, 1, 5, 65531, 1, 6, 65531, 1, 65529, 65531, 1, 65530, 65531, -1073741823, 65531, 65531, 1, 65532, 65531, 1, 65533, 65531, 1, 65534, 65531, -1073741823, 65535, 65531, 1 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="LightPivot" type="Position3D" parent="."]
visible = false

[node name="DirectionalLight" type="DirectionalLight" parent="LightPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 128 )

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0 )

[node name="MainCamera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 128 )
projection = 1
current = true
size = 150.0
near = 0.01
far = 600.0

[node name="Heart" type="StaticBody" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 6, -34 )
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Heart"]
shape = SubResource( 3 )

[node name="Area" type="Area" parent="Heart"]
monitorable = false

[node name="AreaShape" type="CollisionShape" parent="Heart/Area"]
shape = SubResource( 3 )

[node name="HeartSprite" type="Sprite3D" parent="Heart"]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0 )
material_override = ExtResource( 5 )
texture = ExtResource( 6 )

[node name="Lifebar" type="Sprite3D" parent="Heart"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
material_override = SubResource( 4 )
script = ExtResource( 7 )

[node name="Viewport" type="Viewport" parent="Heart/Lifebar"]
size = Vector2( 1024, 1024 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_v_flip = true

[node name="HeartLifebar" type="TextureProgress" parent="Heart/Lifebar/Viewport"]
margin_right = 1024.0
margin_bottom = 1024.0
max_value = 10000.0
value = 10000.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Heart"]
anims/HeartAnimation = SubResource( 5 )

[node name="LifebarTween" type="Tween" parent="Heart"]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardContainer" type="HBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 376.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card" parent="UI/CardContainer" instance=ExtResource( 11 )]

[node name="WaveMoneyRect" type="ColorRect" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.0
margin_right = 135.0
margin_bottom = 30.0
color = Color( 0.25098, 0.25098, 0.25098, 0.501961 )

[node name="WaveLabel" type="Label" parent="UI/WaveMoneyRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -145.0
theme = ExtResource( 12 )
text = "LEVEL 99"
align = 1
autowrap = true
clip_text = true
uppercase = true

[node name="MoneyLabel" type="Label" parent="UI/WaveMoneyRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 125.0
theme = ExtResource( 12 )
text = "MONEY 20"
align = 1
autowrap = true
clip_text = true
uppercase = true

[node name="Path" type="Path" parent="."]
curve = ExtResource( 13 )

[node name="MobSpawner" type="Node" parent="Path"]
script = ExtResource( 14 )
mobs = [ ExtResource( 15 ), ExtResource( 16 ) ]

[node name="Timer" type="Timer" parent="Path/MobSpawner"]
process_mode = 0
wait_time = 0.5
autostart = true
[connection signal="resource_changed" from="." to="UI" method="_on_GameScene_resource_changed"]
[connection signal="wave_changed" from="." to="UI" method="_on_GameScene_wave_changed"]
[connection signal="area_entered" from="Heart/Area" to="Heart" method="_on_Area_area_entered"]
[connection signal="timeout" from="Path/MobSpawner/Timer" to="Path/MobSpawner" method="_on_Timer_timeout"]
